segunda versão com mais coisas de estilo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
     <head>
         <title>Seu cu</title>
+        <style>
+            p{
+                color: rebeccapurple;
+            }
+            
+        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <center>sua mãe</center>
