uns trem n funcionando

--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html>
     <head>
         <title>Seu cu</title>
-        <style>
-            p{
-                color: rebeccapurple;
-            }
-            
-        </style>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <center>sua mãe</center>
-       <p>
-        Hello world 2.0
-       </p> 
+        <div>
+            <img src="chad.png" alt="">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem soluta praesentium quisquam exercitationem illum temporibus ex aut, laboriosam quia neque incidunt cum voluptas numquam, facere minima, obcaecati nostrum odit beatae!
+            </p> 
+            <button onclick="navegar()";>
+                ok
+            </button>
+        </div>
+       <script>
+            function navegar(){
+                window.location = "https://www.google.com.br/?hl=pt-BR";
+            }
+       </script>
     </body>
 </html>
