--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Seu cu</title>
         <link rel="stylesheet" href="style.css">
+        <script src="funcionalidade.js"></script>
     </head>
     <body>
         <center>sua mãe</center>
@@ -11,14 +12,12 @@
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem soluta praesentium quisquam exercitationem illum temporibus ex aut, laboriosam quia neque incidunt cum voluptas numquam, facere minima, obcaecati nostrum odit beatae!
             </p> 
+            <br><br><br><br><br><br><br><br>
+            
             <button onclick="navegar()";>
                 ok
             </button>
         </div>
-       <script>
-            function navegar(){
-                window.location = "https://www.google.com.br/?hl=pt-BR";
-            }
-       </script>
+       
     </body>
 </html>
